src/objects/Course__c.object
<CustomObject>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <description>Completed date of the course</description>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact lookup</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <description>Name of the course</description>
        <label>Course Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credits__c</fullName>
        <label>Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Id of the record</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Source__c</fullName>
        <description>External Source System from which this data is converted</description>
        <label>External Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <description>Hours for the course</description>
        <label>Hours</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>License lookup</description>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Permit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Permit lookup</description>
        <label>Permit</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Course</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>